new template Products QBRIX Poster

--- a/snippets/swatch-slider.liquid
+++ b/snippets/swatch-slider.liquid
@@ -4,7 +4,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
 {% endcomment %}
 
 {% assign file_extension = 'jpg' %}
-
+{{swatch}}
 {% if swatch == blank %}
 <div class="swatch error">
   <p><ly-as-16902707>You must include the snippet swatch.liquid with the name of a product option.</ly-as-16902707></p> 
