--- a/sections/product-template-qbrix-poster.liquid
+++ b/sections/product-template-qbrix-poster.liquid
@@ -517,6 +517,7 @@
           {% if product.variants.size > 1 %}
           <div class="swatch_options">
             {% for option in product.options %}
+            {{option}}
             {% include 'swatch-slider' with option %}
             {% endfor %} 
           </div>
