new template Products QBRIX Poster

--- a/sections/product-template-qbrix-poster.liquid
+++ b/sections/product-template-qbrix-poster.liquid
@@ -871,7 +871,7 @@
               "type": "checkbox",
               "id": "enable_progressbar_text",
               "label": "Enable Progress Bar",
-              "default": true
+              "default": false
             },
             {
               "type": "checkbox",
