new template Products QBRIX Poster

--- a/snippets/swatch-poster.liquid
+++ b/snippets/swatch-poster.liquid
@@ -4,7 +4,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
 {% endcomment %}
 
 {%- assign file_extension = 'jpg' -%}
-{%- assign swatch = 'Gift Amount' -%}
+{%- assign swatch = 'Size' -%}
 
   {%- assign found_option = false -%}
   {%- assign is_color = false -%}
