--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -954,7 +954,7 @@
             </div>
           </div>
 
-          {%- assign faq_blocks = section.blocks | where "type", "faq" -%}
+          {%- assign faq_blocks = section.blocks | where: "type", "faq" -%}
           {%- for faq_block in faq_blocks -%}
             {% if forloop.first == true %}
             <!--FAQ block-->
