--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -955,17 +955,17 @@
           </div>
 
           {%- assign faq_blocks = section.blocks | where: "type", "faq" -%}
-          {%- for faq_block in faq_blocks -%}
+          {%- for block in faq_blocks -%}
             {% if forloop.first == true %}
             <!--FAQ block-->
               <div class="custom-faq" id="custom-faq">
                 <p class="line">frequently asked questions</p>
             {%- endif -%}
               <div class="accordion-tax">
-                <span class="accordion-taxes">{{faq_block.faq_title}}</span>
+                <span class="accordion-taxes">{{block.faq_title}}</span>
               </div>
               <div class="panel" style="display: none;">
-                    <p>{{faq_block.faq_text}}</p>
+                    <p>{{block.faq_text}}</p>
               </div>
             {% if forloop.last == true %}
               </div>
