--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -1492,7 +1492,7 @@
         },
         {
           "type": "faq",
-          "name": "Faq",
+          "name": "Faq-Item",
           "settings":[
             {
               "type": "text",
