--- a/snippets/swatch-poster.liquid
+++ b/snippets/swatch-poster.liquid
@@ -60,9 +60,11 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         </label>
         {% else %}
         <label for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}">
+          <div>{{variant.title}}</div>
           <div class="sw_image_outer">
             <img loading="lazy" src="{{variant.image | img_url: '125x125', crop: 'center' }}"/>
           </div>
+          <div>SIZE 17.3"X17.3" 3500 PCS</div>
           <div class="sw_content_outer">
             <div class="sw_var_price">
               {%- if variant.compare_at_price > variant.price -%}
@@ -82,10 +84,8 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
           <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
         </label>
         {% endif %}
-  
         {% endif %}
-  
-      </div>
+        </div>
       {% endunless %}
       {% if variant.available %}
       <script>
