--- a/snippets/swatch-poster.liquid
+++ b/snippets/swatch-poster.liquid
@@ -64,7 +64,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
           <div class="sw_image_outer">
             <img loading="lazy" src="{{variant.image | img_url: '125x125', crop: 'center' }}"/>
           </div>
-          <div>SIZE 17.3"X17.3" 3500 PCS</div>
+          <div>SIZE 17.3"X17.3"<br/>3500 PCS</div>
           <div class="sw_content_outer">
             <div class="sw_var_price">
               {%- if variant.compare_at_price > variant.price -%}
