--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -358,11 +358,11 @@
     }
     .banner-inspirational-gift_header {
       font-weight: 500;
-      font-size: 24px;
+      font-size: 26px;
       line-height: 34px;
       letter-spacing: 0.145em;
       text-transform: uppercase;
-      padding: 8px 23px;
+      padding: 8px 10px;
       border: 2px solid #FFFFFF;
     }
     .banner-inspirational-gift_text {
@@ -379,7 +379,7 @@
     .step-info {
       display: flex;
     }
-    .step-info__title {
+    .step-info__title p {
       font-weight: 500;
       font-size: 17px;
       line-height: 20px;
