gift card page fix

--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -342,6 +342,9 @@
   {% endif %}
 </div>
 <style>
+  .product-single__meta {
+      font-family: 'Poppins';
+  }
     .banner-inspirational-gift {
       background-color: black;
       background-image: url({{'banner-inspirational-gift-new_bg.png' | asset_url}});
