gift card page fix

--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -383,6 +383,7 @@
       display: flex;
     }
     .step-info__title p {
+      font-family: 'Roboto';
       font-weight: 500;
       font-size: 17px;
       line-height: 20px;
