--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -100,7 +100,7 @@
     {% assign collection_list = collection_1 | replace:' ',',' %}
 
     {% unless collection_list contains collection.handle %}
-    {% if section.settings.tags_enable or section.settings.sort_enable and collection.handle == 'wooden-puzzles' %}
+    {% if collection.handle == 'wooden-puzzles' and section.settings.tags_enable or section.settings.sort_enable %}
     <div class="filters-toolbar-wrapper">
       <div class="page-width">
         <div class="filters-toolbar">
@@ -364,7 +364,7 @@
 
     {% else %}
 
-    {% if section.settings.tags_enable or section.settings.sort_enable and collection.handle == 'wooden-puzzles' %}
+    {% if collection.handle == 'wooden-puzzles' and section.settings.tags_enable or section.settings.sort_enable %}
     <div class="filters-toolbar-wrapper">
       <div class="page-width">
         <div class="filters-toolbar">
