--- a/snippets/combo-upsell-block.liquid
+++ b/snippets/combo-upsell-block.liquid
@@ -105,6 +105,7 @@
     }
     
     .combo-block {
+      display: none;
       border: 1px solid rgb(230, 230, 230);
       float: left;
       width: 100%;
