Add related products section

--- a/templates/product.poster.liquid
+++ b/templates/product.poster.liquid
@@ -4,7 +4,7 @@
 {% endcomment %}
 
 {% section 'product-template-qbrix-poster' %}
-
+{% section 'related-product' %}
 
 {%- if settings.show_cart_drawer -%}
   {%- section  'go-cart' -%}
