--- a/sections/product-template-qbrix-poster.liquid
+++ b/sections/product-template-qbrix-poster.liquid
@@ -1,5 +1,8 @@
 <style>
-
+.swym-button-bar.swym-wishlist-button-bar.swym-inject {
+    display: none;
+}
+/* temp fix*/
     @media only screen and (min-width: 750px) {
       .grid__item.product-single__photos.medium-up--one-half {
         position: sticky;
