iframe fix product page

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -359,6 +359,7 @@
       bottom: 0;
       position: absolute;
       transition: opacity 200ms ease-in;
+      background-image: linear-gradient(to bottom, rgba(212, 59, 59, 0) 80%, #ffffff);
       pointer-events: none;
       height: 50%;
       width: 100%;
