--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -359,6 +359,10 @@
       bottom: 0;
       position: absolute;
       transition: opacity 200ms ease-in;
+      background: -moz-linear-gradientgradient(to bottom, rgba(212, 59, 59, 0) 80%, rgb(255, 255, 255));
+      background: -webkit-linear-gradient(to bottom, rgba(212, 59, 59, 0) 80%, rgb(255, 255, 255));
+      background: -o-linear-gradient(to bottom, rgba(212, 59, 59, 0) 80%, rgb(255, 255, 255));
+      background: -ms-linear-gradient(to bottom, rgba(212, 59, 59, 0) 80%, rgb(255, 255, 255));
       background: linear-gradient(to bottom, rgba(212, 59, 59, 0) 80%, rgb(255, 255, 255));
       pointer-events: none;
       height: 50%;
