iframe fix product page

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -359,7 +359,7 @@
       bottom: 0;
       position: absolute;
       transition: opacity 200ms ease-in;
-      background: linear-gradient(to bottom, rgba(212, 59, 59, 0) 50%, rgb(255, 255, 255));
+      background: linear-gradient(to bottom, rgba(212, 59, 59, 0) 50%, rgb(255, 0, 0, 0 ));
       pointer-events: none;
       height: 50%;
       width: 100%;
