--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -704,8 +704,8 @@
                                 <a href="{{ settings.upsell_product.url }}" class="go-cart-item__title">{{settings.upsell_product.title}}</a>
                                 <div class="go-cart-upsell-item__price">
                                     <a href="#upsell-anoncment-popup" class="upsell-anoncment-popup">See how it works</a>
-                                    <span style="text-decoration: line-through; color:#a6a6a6; padding-right: 3px;">{{ settings.upsell_product.compare_at_price | money }}</span>
-                                    {{ settings.upsell_product.price | money }}
+                                    <span style="text-decoration: line-through; color:#a6a6a6; padding-right: 3px;position: relative; top: -30px;">{{ settings.upsell_product.compare_at_price | money }}</span>
+                                    <span style="position: relative; top: -30px;">{{ settings.upsell_product.price | money }}</span>
                                 </div>
                             </div>
                         </div>
