Create template for product MANDALA

--- a/sections/product-template-mandala.liquid
+++ b/sections/product-template-mandala.liquid
@@ -855,14 +855,14 @@
                 {% endcase %}
                 {%- render 'fw-storyblock-text-left', channel: current_channel -%}
               </div>
-    
+    {%comment%}
               <div class="shipping-banner">
                 <div class="shipping-banner-icon"><img src="{{'shipping-icon.png' | asset_url}}" width="45" height="45"></div>
                 <div class='geotargetlygeocontent1626874543940 shipping-banner-text'>
                 <!-- Content will render here -->
                 </div>
               </div>
-    
+    {%endcomment%}
               <div class="banner-inspirational-gift">
                 <div class="banner-inspirational-gift_header">Inspirational Gift</div>
                 <div class="banner-inspirational-gift_text">Bring more happiness into the life of your loved ones by choosing a gift that is unforgettable experience.</div>
