Whish list added

--- a/assets/custom.scss.liquid
+++ b/assets/custom.scss.liquid
@@ -796,7 +796,7 @@ input.btn.add_toCart {
   .product__label {
     display: inline-block;
     flex: 0 1 auto;
-    margin: 0 0 5px;
+    margin: auto 0;
     padding: 4px 6px 3px;
     letter-spacing: .01em;
     text-transform: uppercase;
