--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -532,7 +532,10 @@
           {%- if product.metafields.link.customer-review-photo -%}
             {%- render 'customer-review-photo' with product -%}
           {%- endif -%}
-            {%- include 'getsocial-inline-bar' -%}
+            <div class="social-and-wishlist">
+              {%- include 'getsocial-inline-bar' -%}
+              {% render 'wishlisthero-custom-button.liquid' %}
+            </div>
           <!-- Swym button on product pages -->
     </div>
       <div class="grid__item medium-up--one-half">
