View Cart button added

--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -875,6 +875,9 @@
      .go-cart__button.checkout {
          display: block;
      }
+     .go-cart__button.cart {
+         padding-top: 5px;
+     }
  </style>
     <script>
         var goCart = new GoCart();
