View Cart button added

--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -876,7 +876,7 @@
          display: block;
      }
      .go-cart__button.cart {
-         padding-top: 5px;
+        margin-top: 10px;
      }
  </style>
     <script>
