--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -167,7 +167,10 @@
           padding-top: 15px;
         }
     </style>
-      {% include 'getsocial-inline-bar' %}
+                  <div class="social-and-wishlist">
+                    {%- include 'getsocial-inline-bar' -%}
+                    {% render 'wishlisthero-custom-button.liquid' %}
+                  </div>
     </div>
     
     <div class="grid__item medium-up--one-half">
